--- a/index.html
+++ b/index.html
@@ -35,7 +35,25 @@
     </header>  
 
     <main>
+        <section class="teams">
 
+            <div class="team-image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+            <div class="team-container">
+                <h3 class="team-container-title">
+                   <span id="quick">Quick list</span><span id="of"> of Our</span><span id="features"> Features</span>
+                </h3>
+                <p class="team-container-des">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="">Explor More</button>
+            </div>
+        </section>
     </main>
 
     <footer>
