--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architect</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body class=".work-sans-font">
     <header class="header">
         <nav class="navbar display-flex">
@@ -21,20 +23,21 @@
         <div class="banner">
             <div class="banner-content">
                 <h2 class="banner-title">
-                    Brand New Group of Architects 
-                    </h2>
-                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
-                        but the majority have suffered alteration in some form, by injected humour,
-                        or randomised words which don't look even</p>
+                    Brand New Group of Architects
+                </h2>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form, by injected humour,
+                    or randomised words which don't look even</p>
 
-                    <button class="btn-one">Explore More</button>
+                <button class="btn-one">Explore More</button>
             </div>
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
-        
-    </header>  
+
+    </header>
 
     <main>
+        <!-- Team section start -->
         <section class="teams">
 
             <div class="team-image">
@@ -46,12 +49,68 @@
 
             <div class="team-container">
                 <h3 class="team-container-title">
-                   <span id="quick">Quick list</span><span id="of"> of Our</span><span id="features"> Features</span>
+                    <span id="quick">Quick list</span><span id="of"> of Our</span><span id="features"> Features</span>
                 </h3>
                 <p class="team-container-des">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
-                <button class="">Explor More</button>
+                <button class="btn-one">Explor More</button>
+            </div>
+        </section>
+        <!-- features will enjoy -->
+        <section>
+
+        </section>
+        <!-- some facts -->
+        <section class="some-facts">
+            <h3 class="facts-title">Some Facts</h3>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+            <div class="facts-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact">
+                    <div>
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact">
+                    <div>
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact">
+                    <div>
+                    <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact">
+                    <div>
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Sponsors section -->
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="sponsor-title">Our sponsors</h3>
+                <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-company">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
             </div>
         </section>
     </main>
@@ -60,4 +119,5 @@
 
     </footer>
 </body>
+
 </html>
