--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body class=".work-sans-font">
+<body class="work-sans-font">
     <header class="header">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
@@ -49,7 +49,7 @@
 
             <div class="team-container">
                 <h3 class="team-container-title">
-                    <span id="quick">Quick list</span><span id="of"> of Our</span><span id="features"> Features</span>
+                    <span id="quick">Quick list</span><span id="of"> of Our</span><span id="feature"> Features</span>
                 </h3>
                 <p class="team-container-des">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -59,8 +59,32 @@
             </div>
         </section>
         <!-- features will enjoy -->
-        <section>
-
+        <section class="features">
+          <div class="">
+            <h3 id="features-section-title" class="features-title">Features you will <br> love & enjoy</h3>
+            <p class="features-title-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <!-- feature card -->
+             <div class="features-card">
+                <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                <p class="ferture-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h4 class="feature-card-title">Drag & Drop Builder</h4>
+                <p class="ferture-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h4 class="feature-card-title">Awesome Modern Design</h4>
+                <p class="ferture-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+             <div class="features-card">
+                <h4 class="feature-card-title">Super Easy to Edit</h4>
+                <p class="ferture-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+             </div>
+         </div>
+            <div >
+                <img src="images/architect.png" alt="" class="feature-photo">
+                <button id="" class="btn-two"><span id="ten">10+Year</span><br> Experience</button>
+            </div>
         </section>
         <!-- some facts -->
         <section class="some-facts">
@@ -115,8 +139,8 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+            <p class="footer-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 
